promo fix letter-spacing for tabs

--- a/src/less/promo.less
+++ b/src/less/promo.less
@@ -67,6 +67,7 @@
 			text-transform: uppercase;
 			text-decoration: none;
 			position: relative;
+			letter-spacing: 1px;
 		}
 		&--active a, a:hover {
 			color: @orange-color;
